67a9d8a Fixed spacing

--- a/src/06-components/organisms/linked-catalog/linked-catalog.scss
+++ b/src/06-components/organisms/linked-catalog/linked-catalog.scss
@@ -4,7 +4,7 @@
 .sc-linked-catalog {
   &__title {
     padding: 0;
-    margin-bottom: $M;
+    margin-top: $M;
     margin-bottom: $M;
     font-size: 1rem;
     
